--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "electron-react-starter",
   "main": "main.js",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "webpack&&electron .",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
@@ -19,12 +19,25 @@
   },
   "homepage": "https://github.com/lisiver/electron-react-starter#readme",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "@electron-forge/cli": "^6.0.0-beta.54",
     "@electron-forge/maker-deb": "^6.0.0-beta.54",
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "^11.2.1"
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "electron": "^11.2.1",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
