--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "electron-react-starter",
   "version": "1.0.0",
   "description": "electron-react-starter",
-  "main": "main.js",
+  "main": "public/electron.js",
   "scripts": {
-    "start": "webpack&&electron .",
+    "start": "concurrently \"cross-env BROWSER=none npm run react:dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "build": "npm run react:build&&npm run make",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "react:dev": "webpack-dev-server",
+    "react:build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -29,15 +32,20 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "babel-loader": "^8.2.2",
+    "concurrently": "^5.3.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "electron": "^11.2.1",
+    "electron-is-dev": "^1.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "style-loader": "^2.0.0",
-    "webpack": "^5.18.0",
-    "webpack-cli": "^4.4.0"
+    "wait-on": "^5.2.1",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
