--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "electron-react-starter",
   "main": "public/electron.js",
   "scripts": {
-    "start": "concurrently \"cross-env BROWSER=none npm run react:dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "start": "concurrently \"cross-env npm run react:dev\" \"wait-on http://localhost:3000 && cross-env NODE_ENV=development electron .\"",
     "build": "npm run react:build&&npm run make",
     "package": "electron-forge package",
     "make": "electron-forge make",
@@ -36,7 +36,6 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "electron": "^11.2.1",
-    "electron-is-dev": "^1.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
     "react": "^17.0.1",
@@ -48,7 +47,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
   },
   "config": {
     "forge": {
