--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0",
+    "electron-squirrel-startup": "^1.0.0"
   },
   "config": {
     "forge": {
